--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "tailwind": "npm run tw",
-    "tw": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "tw": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "build": "node build.js && cp -r public build/public"
   },
   "keywords": [],
   "author": "",
