--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "index.js",
   "scripts": {
     "tailwind": "npm run tw",
-    "tw": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
-    "build": "node build.js && cp -r public build/public"
+    "tw": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
+    "dev": "nodemon src/server.js --delay 100ms",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
