--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tailwind": "npm run tw",
     "tw": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
     "dev": "nodemon src/server.js --delay 100ms",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "db": "mongod --dbpath ./data"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
 }
