--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "db": "mongod --dbpath ./data",
     "mkcert": "mkcert -key-file key.pem -cert-file cert.pem localhost 127.0.0.1 localhost ::1",
     "mkcert:i": "mkcert -install",
-    "cert": "openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -days 365"
+    "cert": "openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -days 365",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.7.0",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
