--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "projet-prep",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "tailwind": "npm run tw",
+    "tailwind": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css",
     "tw": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
     "dev": "nodemon src/server.js --delay 100ms",
     "start": "node src/server.js",
@@ -20,13 +20,12 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "tailwindcss": "^3.3.3"
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1"
   }
 }
