--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.7.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^8.0.0",
+    "mongoose": "^8.0.0"
   }
 }
